# Pacman-Robotics

./: README.md  highscore.txt  renderer.py  settings.py  setup.cfg  test_pep257.py
damt_bringup-main/: README.md  package.xml  setup.cfg  setup.py
damt_bringup-main/launch/: camera.launch.py  linefollower.launch.py
damt_drive-main/: CMakeLists.txt  README.md
damt_drive-main/deprecated/: motor_driver.cpp
damt_drive-main/messdaten/: PID_kalibrierung_kd.txt  PID_kalibrierung_ki.txt  PID_kalibrierung_kp.txt  messergebnisse.txt  messung.cc  sensormessug_Anfahren_Linkskreuzung.txt  sensormessug_Boden.txt  sensormessug_Gerade_überquerung.txt  sensormessug_Mittellinie.txt  sensormessug_Schwarz.txt  sensormessug_Seitlich_Überquerung.txt  tf_v1.txt
damt_drive-main/src/: line_follower.cpp
damt_game_msg-main/: CMakeLists.txt  README.md  package.xml
damt_game_msg-main/msg/: GameData.msg
damt_map-main/: CMakeList.txt  README.md  package.xml  setup.py
damt_map-main/damt_game/: map_node.py  score.py
damt_vision-main/: README.md  package.xml  setup.py
damt_vision-main/Deprecated/: object_detector.py
damt_vision-main/Messungen/: camera_stream+decoder.txt  camera_stream_stitched+decoder.txt  conclusion.txt  pathfinder_stream+decoder.txt
damt_vision-main/damt_vision/: cam_combined.py  cam_decoder.py  cam_encoder.py  controllhub.py  pac_logik.py
damt_vision-main/docs/: Praktikumsbericht.md
pacman-main/: Befehle.txt  sensor_v.txt  tf_v.txt
pacman-main/damt_drive/: package.xml
pacman-main/damt_drive/log/: sensor_v1.txt
pacman-main/damt_drive/src/: line_follower.cpp  motor_driver.cpp
pacman-main/damt_vision/: setup.cfg  setup.py
pacman-main/damt_vision/damt_vision/: camera_stream.py
