<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>damt_bringup</name>
  <version>0.0.0</version>
  <description>start von mehreren nodes. kopiert von emaros_bringup</description>
  <maintainer email="pgehricke@uos.de">philipp</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

	
  <exec_depend>emaros_control</exec_depend>
  <exec_depend>emaros_xbox_bt</exec_depend>
  <exec_depend>imu_bno055</exec_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
