<?xml version="1.0"?>
<package format="3">
  <name>damt_game_msgs</name>
  <version>0.0.0</version>
  <description>Pac-Man game messages</description>
  <maintainer email="ahcelik@uni-osnabrueck.de">ahmet</maintainer>
  <license>Apache-2.0</license>

  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
